# tape-death

./: .gitignore  CMakeLists.txt  README.md  create_installer.sh  install.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TapeDeathEngine.h
